fix pop up nav position on safari

--- a/src/styles.css
+++ b/src/styles.css
@@ -93,7 +93,7 @@ nav.nav-head > *:hover {
     height: 100vh;
     width: 100vw;
     z-index: 1001;
-    /* top: 9%; */
+    top: 5%;
     left: 0%;
 }
 
