--- a/src/styles/aboutSec.css
+++ b/src/styles/aboutSec.css
@@ -20,13 +20,13 @@ section.about > div {
     section.about > div {
         max-width: 720px;
         /* font-size: 1rem; */
-        padding: 1rem 1rem;
+        padding: 1rem 0.5rem;
     }
     section.about {
         display: flex;
         justify-content: center;
         align-items: center;
-        padding: 1rem 3rem;
+        padding: 1rem 0.75rem;
     }
     
 }
@@ -46,7 +46,7 @@ section.about > div {
         display: flex;
         justify-content: center;
         align-items: center;
-        padding: 1rem 2rem;
+        padding: 1rem 0.5rem;
         min-width: 240px;
     }
     
